syntax = "proto3";

option java_package = "io.ennoo.fabric-client.grpc.proto.geneses";
option java_outer_classname = "ServerProto";
option go_package = "grpc/proto/geneses";

package geneses;

import "grpc/proto/geneses/conf.proto";
import "grpc/proto/geneses/result.proto";

service Genesis {
    // GenerateYml 生成区块链配置YML文件
    rpc GenerateYml (Generate) returns (String) {
    }
    // GenerateCryptoFiles 生成区块链配置文件集合
    rpc GenerateCryptoFiles (Crypto) returns (CMDOut) {
    }
    // GenerateGenesisBlock 生成区块链创世区块
    rpc GenerateGenesisBlock (Crypto) returns (CMDOut) {
    }
    // GenerateChannelTX 生成区块链创世区块
    rpc GenerateChannelTX (ChannelTX) returns (CMDOut) {
    }
}